manifests/immich/requirements/ingressroute.yaml
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: immich
# spec:
#   entryPoints:
#   - websecure
#   - web
#   routes:
#   - kind: Rule
#     match: Host(`immich.alexbissessur.dev`)
#     services:
#     - name: immich-server
#       port: 2283
#   tls:
#     certResolver: le


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich
  annotations:
    cert-manager.io/cluster-issuer: "prod-issuer"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - immich.alexbissessur.dev
    secretName: immich-tls
  rules:
  - host: immich.alexbissessur.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: immich-server
            port:
              number: 2283
